# my_notpad

./: .gitignore  CMakeLists.txt  notepadConfig.h.in
include/: _error.h  _input.h  app.hpp  notepad.hpp
src/: Application.cpp  app.cpp  error.cpp  input.cpp  notepad.cpp
